// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorklogShiftView should describe the absence of own worklogs 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        No work logged here for you yet
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      No work logged here for you yet
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WorklogShiftView should not show a worklog while it's loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        Loading...
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      Loading...
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WorklogShiftView should show the worklogs for the current user and issue when loading is done 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="monkeyFlexContainer"
      >
        <table
          class="monkeyTable"
        >
          <thead>
            <tr>
              <th
                align="center"
              >
                Start
              </th>
              <th
                align="center"
              >
                Comment
              </th>
              <th
                align="center"
              >
                Time Spent
              </th>
              <th
                align="center"
              >
                Shift/Split time
              </th>
              <th
                align="center"
              >
                Clone to Start (Work in Progress)
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                align="center"
              >
                <p>
                  2019-10-01 01:02:03
                </p>
              </td>
              <td
                align="center"
              >
                <p>
                  first step
                </p>
              </td>
              <td
                align="center"
              >
                <p>
                  1m
                </p>
              </td>
              <td
                align="center"
              >
                <input
                  data-testid="ShiftInput1111"
                  placeholder="5h 9m"
                  type="text"
                  value="1m"
                />
                <button
                  data-testid="ShiftButton1111"
                  disabled=""
                  title="move"
                >
                  &gt;
                </button>
              </td>
              <td
                align="center"
              >
                <input
                  data-testid="CloneInput1111"
                  placeholder="2002-10-01 10:01:11"
                  type="text"
                  value="2019-10-01 01:02:03"
                />
                <button
                  data-testid="CloneButton1111"
                  disabled=""
                  title="clone"
                >
                  +
                </button>
              </td>
            </tr>
            <tr>
              <td
                align="center"
              >
                <p>
                  2020-01-10 01:03:04
                </p>
              </td>
              <td
                align="center"
              >
                <p>
                  second step
                </p>
              </td>
              <td
                align="center"
              >
                <p>
                  2m
                </p>
              </td>
              <td
                align="center"
              >
                <input
                  data-testid="ShiftInput2222"
                  placeholder="5h 9m"
                  type="text"
                  value="2m"
                />
                <button
                  data-testid="ShiftButton2222"
                  disabled=""
                  title="move"
                >
                  &gt;
                </button>
              </td>
              <td
                align="center"
              >
                <input
                  data-testid="CloneInput2222"
                  placeholder="2002-10-01 10:01:11"
                  type="text"
                  value="2020-01-10 01:03:04"
                />
                <button
                  data-testid="CloneButton2222"
                  disabled=""
                  title="clone"
                >
                  +
                </button>
              </td>
            </tr>
          </tbody>
        </table>
        <div>
          <label
            class="worklogShiftTarget"
          >
            Target Issue
            <input
              placeholder="ISSUE-1234"
              title="Target Issue"
              value=""
            />
          </label>
          <p>
            
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="monkeyFlexContainer"
    >
      <table
        class="monkeyTable"
      >
        <thead>
          <tr>
            <th
              align="center"
            >
              Start
            </th>
            <th
              align="center"
            >
              Comment
            </th>
            <th
              align="center"
            >
              Time Spent
            </th>
            <th
              align="center"
            >
              Shift/Split time
            </th>
            <th
              align="center"
            >
              Clone to Start (Work in Progress)
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              align="center"
            >
              <p>
                2019-10-01 01:02:03
              </p>
            </td>
            <td
              align="center"
            >
              <p>
                first step
              </p>
            </td>
            <td
              align="center"
            >
              <p>
                1m
              </p>
            </td>
            <td
              align="center"
            >
              <input
                data-testid="ShiftInput1111"
                placeholder="5h 9m"
                type="text"
                value="1m"
              />
              <button
                data-testid="ShiftButton1111"
                disabled=""
                title="move"
              >
                &gt;
              </button>
            </td>
            <td
              align="center"
            >
              <input
                data-testid="CloneInput1111"
                placeholder="2002-10-01 10:01:11"
                type="text"
                value="2019-10-01 01:02:03"
              />
              <button
                data-testid="CloneButton1111"
                disabled=""
                title="clone"
              >
                +
              </button>
            </td>
          </tr>
          <tr>
            <td
              align="center"
            >
              <p>
                2020-01-10 01:03:04
              </p>
            </td>
            <td
              align="center"
            >
              <p>
                second step
              </p>
            </td>
            <td
              align="center"
            >
              <p>
                2m
              </p>
            </td>
            <td
              align="center"
            >
              <input
                data-testid="ShiftInput2222"
                placeholder="5h 9m"
                type="text"
                value="2m"
              />
              <button
                data-testid="ShiftButton2222"
                disabled=""
                title="move"
              >
                &gt;
              </button>
            </td>
            <td
              align="center"
            >
              <input
                data-testid="CloneInput2222"
                placeholder="2002-10-01 10:01:11"
                type="text"
                value="2020-01-10 01:03:04"
              />
              <button
                data-testid="CloneButton2222"
                disabled=""
                title="clone"
              >
                +
              </button>
            </td>
          </tr>
        </tbody>
      </table>
      <div>
        <label
          class="worklogShiftTarget"
        >
          Target Issue
          <input
            placeholder="ISSUE-1234"
            title="Target Issue"
            value=""
          />
        </label>
        <p>
          
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WorklogShiftView should tell the user when an error has occurred 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <p>
        Error while loading worklogs for issue: 
        dafuq
      </p>
    </div>
  </body>,
  "container": <div>
    <p>
      Error while loading worklogs for issue: 
      dafuq
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
